@@ -1,3 +1,12 @@
+2011-08-16  Pavel Feldman  <pfeldman@google.com>
+
+        Web Inspector: hide non-conservative methods from the protocol documentation.
+        https://bugs.webkit.org/show_bug.cgi?id=66301
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/Inspector.json:
+
 2011-08-16  Andras Becsi  <abecsi@webkit.org>
 
         Web Inspector: nuke background events collection (dead feature)
